# speech_to_text_slovak

./: .gitignore  README.md  __init__.py  finished_notes  input_files  notes_LIT- Jánošík - Stanislav Štepka - Absurdná dráma 12.05.2025.md  output_files  pipeline.py  pyproject.toml  slovak_transcriber.py  transcript_processor.py
finished_notes/: notes_2025.03.31_LIT- Jozef Urban - odpoveď Gabriel Galbavý.md  notes_2025.03.31_LIT- Starovek - opakovanie, nedokončené.md  notes_2025.04.03_LIT- Starovek Dráma.md  notes_2025.04.07_LIT- Starovek - odpoveď Matej Repka.md  notes_2025.04.07_LIT- Stredovek (by Martin Kozelka).md  notes_2025.04.07_LIT- Stredovek - analýza diela.md  notes_2025.04.08_LIT- Barok - Hugolín Gavlovič.md  notes_2025.04.08_LIT- Renesancia (by Radovan Psotný).md  notes_2025.04.08_LIT- Renesancia - William Shakespear.md  notes_2025.04.08_LIT- Starovek - odpoveď Martin Valko.md  notes_2025.04.10_LIT- Barok (by Dominik Ďuriš).md  notes_2025.04.10_LIT- Klasicizmus (by Gabriel Galbavý).md  notes_2025.04.24_LIT- Romantizmus (by Jakub Hořelica).md  notes_2025.04.28_LIT- Romantizmus.md  notes_2025.05.05_LIT- Klasicizmus a Romantizmus.md  notes_2025.05.06_LIT- Balada v romantizme a realizme papier.md  notes_2025.05.06_LIT- Barok - Lakomec - odpoveď Filip Greguš.md  notes_2025.05.06_LIT- DOPLNOK Pltník.md  notes_2025.05.06_LIT- Romantizmus a Realizmus (by Matej Púčik).md  notes_2025.05.12_LIT- Jánošík - Stanislav Štepka - Absurdná dráma.md  notes_2025.05.15_LIT- Romantizmus - Ľúbostná lyrika.md
not-working/: claude_automation.py  claude_complete_integration.py  (+1 more)
(+54 files in other folders)
