[tool.poetry]
name = "speech-to-text-slovak"
version = "0.1.0"
description = "Tools for Slovak speech transcription"
authors = ["Lost Control <lcontrol2326social@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
anthropic = "0.51.0"
python-dotenv = "1.1.0"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transcribe = "slovak_transcriber:main"
notes = "transcript_processor:main"
process = "pipeline:process_audio_to_notes"